images, layout changes

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -35,6 +35,10 @@
 
 body {
   color: rgb(var(--foreground-rgb));
+  padding-left: 4rem /* 64px */;
+  padding-right: 4rem /* 64px */;
+  --tw-bg-opacity: 1;
+  background-color: rgb(23 23 23 / var(--tw-bg-opacity)) /* #171717 */;
 }
 
 html {
